--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -29,6 +29,7 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm install firebase
+    - run: npm install -g firebase-tools
     - run: firebase init hosting:github
     
 
