--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -30,8 +30,7 @@ jobs:
     - run: npm run build --if-present
     - run: npm install firebase
     - run: npm install -g firebase-tools
-    - run: firebase login
-    - run: firebase init hosting:github
+    - run: npm audit fix --force
     
 
   build_and_preview:
