--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: npm setup CI
+name: Setup Action
 
 on:
   push:
@@ -29,8 +29,7 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm install firebase
-    - run: npm install -g firebase-tools
-    - run: npm audit fix --force
+    - run: npm audit fix
     
 
   build_and_preview:
@@ -45,13 +44,3 @@ jobs:
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
           
-  build_and_deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_THICHCAY_COM }}'
-          channelId: live
-          projectId: thichcay-com
